--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -142,7 +142,6 @@ body {
 
 
 
-
 /* =============================== */
 /*      FULL MOBILE CSS (≤880px)   */
 /* =============================== */
@@ -159,7 +158,7 @@ body {
   /* TOPBAR ADJUSTMENTS             */
   /* ------------------------------ */
   .topbar {
-    justify-content: space-between;   /* space for ≡ on left, empty area right */
+    justify-content: space-between;
     padding: 16px 20px;
     position: sticky;
     top: 0;
@@ -179,18 +178,18 @@ body {
     display: block !important;
     font-size: 42px;
     font-weight: 800;
-    color: var(--brand);    /* blue text */
+    color: var(--brand);     /* blue text */
     background: none;
     border: none;
     cursor: pointer;
-    margin-top: -6px;       /* lifts it slightly upward */
+    margin-top: -6px;        /* lift slightly */
   }
 
   /* ------------------------------ */
   /* MOBILE NAVIGATION DROPDOWN     */
   /* ------------------------------ */
   .mobile-nav {
-    display: none;          /* toggle via JS */
+    display: none;
     flex-direction: column;
     background: #ffffff;
     border-bottom: 1px solid #dbe1e8;
@@ -206,10 +205,10 @@ body {
     font-size: 18px;
     font-weight: 600;
     padding: 12px 0;
-    text-align: left;
     background: none;
     border: none;
-    color: var(--brand);   /* blue text */
+    text-align: left;
+    color: var(--brand);    /* blue text */
     text-decoration: none;
   }
 
@@ -230,7 +229,7 @@ body {
   }
 }
 
-/* Ensure PC stays clean */
+/* PC default (mobile-only items hidden) */
 .mobile-menu-btn {
   display: none;
 }
@@ -238,12 +237,13 @@ body {
   display: none;
 }
 
-
-  @media (max-width: 880px) {
+/* Ensure body layout stays normal on mobile */
+@media (max-width: 880px) {
   body {
     display: block !important;
   }
 }
+
 
 </style>
 </head>
@@ -260,28 +260,31 @@ body {
   <a class="nav-link" href="events.html">Events</a>
   <a class="nav-link" href="announcements.html">Announcements</a>
   <a class="nav-link" href="https://webs-star.github.io/swissaid/">Website Home</a>
-
-
-
 </aside>
 
-<!-- MAIN AREA -->
+
+<!-- MAIN WRAPPER -->
 <div class="main">
 
-<header class="topbar">
-  <button class="mobile-menu-btn">≡</button>
-  <a href="profile.html">My Account</a>
-  <button id="logoutBtn">Logout</button>
-</header>
+  <!-- TOP BAR -->
+  <header class="topbar">
+    <button class="mobile-menu-btn" id="mobileToggle">≡</button>
+    <a href="profile.html">My Account</a>
+    <button id="logoutBtn">Logout</button>
+  </header>
 
-<div class="mobile-nav" id="mobileMenu">
-  <a href="dashboard.html">Dashboard</a>
-  <a href="profile.html">My Profile</a>
-  <a href="events.html">Events</a>
-  <a href="announcements.html">Announcements</a>
-  <a href="https://webs-star.github.io/swissaid/">Website Home</a>
-  <button onclick="logoutBtn.click()">Logout</button>
+  <!-- MOBILE NAV -->
+  <div class="mobile-nav" id="mobileMenu">
+    <a href="dashboard.html">Dashboard</a>
+    <a href="profile.html">My Profile</a>
+    <a href="events.html">Events</a>
+    <a href="announcements.html">Announcements</a>
+    <a href="https://webs-star.github.io/swissaid/">Website Home</a>
+    <button onclick="document.getElementById('logoutBtn').click()">Logout</button>
+  </div>
+
 </div>
+
 
   <!-- CONTENT -->
   <main class="content">
