--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -350,7 +350,7 @@ body {
 <aside class="sidebar">
   <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763476964/Screenshot_73_e5hyu9.png">
 
-  <div class="sidebar-title">Swiss Aid Connect</div>
+  <div class="sidebar-title">Swiss Aid Connect Foundation</div>
 
   <a class="nav-link active" href="dashboard.html">Dashboard</a>
   <a class="nav-link" href="profile.html">My Profile</a>
@@ -368,7 +368,7 @@ body {
 
   <div class="topbar-brand">
     <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763476964/Screenshot_73_e5hyu9.png">
-    <span>Swiss Aid Connect</span>
+    <span>Swiss Aid Connect<br>Foundation</span>
   </div>
 
  
