--- a/members/admin.html
+++ b/members/admin.html
@@ -18,7 +18,17 @@ input,textarea{width:100%;padding:10px;border-radius:8px;border:1px solid #d1d5d
 </style>
 </head>
 <body>
-<header class="header"><div style="font-weight:700">Admin Panel</div></header>
+<header class="header" style="display:flex;align-items:center;gap:12px;">
+  <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763476964/Screenshot_73_e5hyu9.png" 
+       alt="Swiss Aid Logo" 
+       style="height:38px; width:auto;">
+
+  <div style="display:flex;flex-direction:column;line-height:1;">
+    <div style="color:#fff; font-size:18px; font-weight:700;">Swiss Aid Connect Foundation</div>
+    <div style="color:#F5C22D; font-size:13px; font-weight:600;">Admin Panel</div>
+  </div>
+</header>
+
 <main class="container">
   <div class="card">
     <h3>Create Announcement</h3>
