--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -357,6 +357,7 @@ body {
   <a class="nav-link" href="events.html">Events</a>
   <a class="nav-link" href="announcements.html">Announcements</a>
   <a class="nav-link" href="https://webs-star.github.io/swissaid/">Website Home</a>
+  <button id="logoutBtn">Logout</button>
 </aside>
 
 
