--- a/members/dashboard2.html
+++ b/members/dashboard2.html
@@ -230,6 +230,29 @@ body {
     padding: 18px;
   }
 }
+
+
+  /* ===================================== */
+/* DESKTOP (min-width: 881px) — CLEAN FIX */
+/* ===================================== */
+@media (min-width: 881px) {
+
+  /* Hide mobile menu */
+  .mobile-nav {
+    display: none !important;
+  }
+
+  /* Hide hamburger menu */
+  .mobile-menu-btn {
+    display: none !important;
+  }
+
+  /* Do NOT show the topbar logo/brand on desktop */
+  .topbar-brand {
+    display: none !important;
+  }
+}
+
 </style>
 </head>
 
