--- a/members/dashboard2.html
+++ b/members/dashboard2.html
@@ -249,6 +249,13 @@ body {
     display: none !important;
   }
 }
+/* FORCE MOBILE NAV LINKS TO BE BLUE */
+@media (max-width: 880px) {
+  .mobile-nav a,
+  .mobile-nav button {
+    color: var(--brand) !important;   /* Blue text */
+  }
+}
 
 </style>
 </head>
