--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -227,6 +227,22 @@ body {
   cursor: pointer;
   box-shadow: none !important;
 }
+
+
+  /* ===== MOBILE NAV TEXT BLUE — FINAL ===== */
+@media (max-width: 880px) {
+  .mobile-menu a,
+  .mobile-menu li a,
+  nav.mobile-nav a {
+    color: #0C2856 !important;   /* Swiss Blue */
+  }
+
+  /* Optional: make hover also blue */
+  .mobile-menu a:hover {
+    color: #0C2856 !important;
+  }
+}
+
 </style>
 
 
