--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -235,6 +235,7 @@ body {
   <a class="nav-link" href="events.html">Events</a>
   <a class="nav-link" href="announcements.html">Announcements</a>
   <a class="nav-link" href="https://webs-star.github.io/swissaid/">Website Home</a>
+  <a class="nav-link" href="https://webs-star.github.io/swissaid/members/Admin">ADMIN ONLY</a>
 <button id="logoutBtnDesktop" class="nav-link">Logout</button>
 
   
@@ -257,6 +258,7 @@ body {
     <a href="events.html">Events</a>
     <a href="announcements.html">Announcements</a>
     <a href="https://webs-star.github.io/swissaid/">Website Home</a>
+    <a class="nav-link" href="https://webs-star.github.io/swissaid/members/Admin">ADMIN ONLY</a>
   <button id="logoutBtnDesktop">Logout</button>
 
   </div>
