--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -259,7 +259,7 @@ body {
     <a href="announcements.html">Announcements</a>
     <a href="https://webs-star.github.io/swissaid/">Website Home</a>
     <a class="nav-link" href="https://webs-star.github.io/swissaid/members/admin">ADMIN ONLY</a>
-  <button id="logoutBtnDesktop">Logout</button>
+ <button id="logoutBtnMobile">Logout</button>
 
   </div>
 
